Make nsXFormsUtils::ReportError() use nsIScriptError, so we can log different error types. Bug 289518, patch by doron, r=aaronr+me, a=mkaply (NBOTB)